# Augur

./: .gitignore  CLAUDE.md  PROJECT_INDEX.md  README.md  pyproject.toml
augur/: __init__.py  api.py  base_rates.py  calibration.py  divergence.py  engine.py  response_parser.py  router.py  scoring.py  server.py  structured.py  submissions.py
augur/docs/: citation_audit_2025_03.md
augur/specialists/: data_scientist.toml  intelligence_analyst.toml  market_analyst.toml  reasoner.toml  researcher.toml
tests/: test_api.py  test_base_rates.py  test_calibration.py  test_divergence.py  test_engine.py  test_response_parser.py  test_router.py  test_scoring.py  test_structured.py  test_submissions.py
